# IPC-Short-Message-Service

./: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md  client  compile.sh  config.txt  server
src/: client.c  definitions.h  server.c
src/helpers/: files.c  files.h
src/structs/: group.c  group.h  messages.c  messages.h  request.c  request.h  server_operations.c  server_operations.h  user.c  user.h
